[package]
name = "relay-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
config = "0.13.3"
env_logger = "0.10.0"
futures = "0.3.28"
log = { version = "0.4.17", features = ["serde", "std"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = ">=1.0"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["full"] }
toml = "0.7.3"
uuid = { version = "1.3.1", features = ["fast-rng", "v4"] }

[profile.release]
lto = true
