[package]
name = "relay-server"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.5"
config = "0.13.3"
env_logger = "0.10.0"
futures = "0.3.28"
log = { version = "0.4.17", features = ["serde", "std"] }
prettytable = "0.10.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = ">=1.0"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["full"] }
uuid = { version = "1.3.1", features = ["fast-rng", "v4"] }

[profile.release]
lto = true
